fixed collapse from moving other elements

--- a/frontend/shopping-list/src/components/Styles/Navigation.css
+++ b/frontend/shopping-list/src/components/Styles/Navigation.css
@@ -1,6 +1,5 @@
 .navigation-container {
     width: 100%;
-    /*background-color: #2A922D;*/
     top: 0;
     left: 0;
     position: fixed;
@@ -10,7 +9,7 @@
 
 @media (max-width: 767px){
     .navigation-container {
-        /*height: 60px;*/
+        height: 60px;
         width: 100%;
     }
 
@@ -101,12 +100,13 @@
         display: block;
     }
 
+    .navbar-collapse {
+        margin-top: 12px;
+    }
+
 }
 .dropdown-default{
     width: 400px;
     padding: 20px ;
 }
 
-.navbar-collapse {
-    margin-top: 12px;
-}
